--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,13 @@
+[aliases]
+test=nosetests
+
 [bdist_wheel]
 universal=1
 
 [flake8]
 ignore=D203
+
+[nosetests]
+detailed-errors=1
+verbosity=2
+with-doctest=1
