--- a/.travis.yml
+++ b/.travis.yml
@@ -7,33 +7,33 @@ matrix:
     - python: 3.6
       env: TEST=lint
     - python: 2.6
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: 2.7
       env: TEST=test FORM_VERSION=4.0
     - python: 2.7
       env: TEST=test FORM_VERSION=4.1
     - python: 2.7
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: 3.2
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: 3.3
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: 3.4
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: 3.5
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: 3.6
       env: TEST=test FORM_VERSION=4.0
     - python: 3.6
       env: TEST=test FORM_VERSION=4.1
     - python: 3.6
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: nightly
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: pypy
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
     - python: pypy3
-      env: TEST=test FORM_VERSION=4.2-pre
+      env: TEST=test FORM_VERSION=4.2
   allow_failures:
     - python: nightly
   fast_finish: true
