[ci] Deploy to PyPI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: python
 
-matrix:
+jobs:
   include:
-    - python: 2.7
+    - stage: lint
+      python: 2.7
       env: TEST=lint
     - python: 3.6
       env: TEST=lint
-    - python: 2.6
+    - stage: test
+      python: 2.6
       env: TEST=test FORM_VERSION=4.2
     - python: 2.7
       env: TEST=test FORM_VERSION=4.0
@@ -34,6 +36,19 @@ matrix:
       env: TEST=test FORM_VERSION=4.2
     - python: pypy3
       env: TEST=test FORM_VERSION=4.2
+    - stage: deploy
+      python: 3.6
+      install: skip
+      script: skip
+      after_success: true
+      deploy:
+        provider: pypi
+        user: "$PYPI_USER"
+        password: "$PYPI_PASSWORD"
+        on:
+          tags: true
+          distributions: sdist bdist_wheel
+          condition: $TRAVIS_SECURE_ENV_VARS == true
   allow_failures:
     - python: nightly
   fast_finish: true
