--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ matrix:
     - python: pypy3
       env: TEST=test FORM_VERSION=4.2
     - python: 3.6
+      env: TEST=deploy
       install: skip
       script: skip
       after_success: true
