Introduce optional static typing
Type hints are added within the comment-based syntax that should work
with Python 2.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,22 @@ test=nosetests
 [bdist_wheel]
 universal=1
 
-[flake8]
-ignore=D203
+[mypy]
+follow_imports=normal
+ignore_missing_imports=True
+# strict mode
+disallow_untyped_calls=True
+disallow_untyped_defs=True
+disallow_incomplete_defs=True
+check_untyped_defs=True
+disallow_subclassing_any=True
+disallow_untyped_decorators=True
+warn_redundant_casts=True
+warn_return_any=True
+warn_unused_ignores=True
+warn_unused_configs=True
+no_implicit_optional=True
+strict_optional=True
 
 [nosetests]
 detailed-errors=1
