--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,12 @@ test=nosetests
 [bdist_wheel]
 universal=1
 
+[flake8]
+max-line-length = 88
+extend-ignore =
+    D202,  # for pydocstyle<5
+    E203,W503,  # for black
+
 [mypy]
 follow_imports=normal
 ignore_missing_imports=True
